# WirelessMouse

./: .clang-format  .gitignore  .gitmodules  README.md  build.sh
MobileInterface/: .gitignore  AndroidManifest.xml.template  CMakeLists.txt  Makefile  MobileInterface.sln  format.sh
MobileInterface/MobileInterface/: App.xaml  App.xaml.cs  Dragger.xaml  Dragger.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MobileInterface.csproj  ToggleButton.xaml  ToggleButton.xaml.cs
MobileInterface/src/: CMakeLists.txt  app.c  app.h  main.c
MobileInterface/src/ui/: CMakeLists.txt  button.c  button.h  dragger.c  dragger.h  rect.c  rect.h  ui.h
MobileInterfaceV2/: Makefile  test.c
MobileInterfaceV2/src/: app.c  app.h  main.c
MobileInterfaceV2/src/ui/: button.c  button.h  dragger.c  dragger.h  rect.c  rect.h  ui.h
UDPSender/: README.md  UDPSender.sln
UDPSender/UDPSender/: Program.cs  UDPSender.csproj
WirelessMouseDesktop/: CMakeLists.txt  README.md  WirelessMouseDesktop.service  WirelessMouseDesktop.sln  build.sh  format.sh  install.sh
WirelessMouseDesktop/Encoding/: Encoding.cs  Encoding.csproj  Tests.cs
WirelessMouseDesktop/MoveMoving/: MoveMoving.csproj  Program.cs
WirelessMouseDesktop/NotifyIcon/: Client.Designer.cs  Client.cs  DesktopApp.csproj  Form.Designer.cs  Form.cs  Form.resx  MouseControl.cs  NotifyIcon.csproj  Program.cs  TrayIcon.cs
WirelessMouseDesktop/WirelessMouseDesktop/: MouseControl.cs  Settings.cs  TrayIcon.cs  WirelessMouseDesktop.csproj
WirelessMouseDesktop/WirelessMouseDesktop/Properties/: Settings.Designer.cs  Settings.settings
WirelessMouseDesktop/src/: CMakeLists.txt  MouseControl.c  MouseControl.h  WirelessMouseDesktopV2.c  WirelessMouseDesktopV2.h
WirelessMouseDesktopV2/: CMakeLists.txt  build.sh  bundle-resources.go  favicon.rc  format.sh  mingw.cmake
WirelessMouseDesktopV2/WirelessMouseDesktopV2/: CMakeLists.txt  Encoding.c  Encoding.h  MouseControl.c  MouseControl.h  WirelessMouseDesktopV2.c  WirelessMouseDesktopV2.h
WirelessMouseDesktopV2/src/: MouseControl.c  WirelessMouseDesktopV2.c  WirelessMouseDesktopV2.h
